@@ -41,7 +41,7 @@ namespace Marvel {
         Separator, Checkbox, Listbox, Text, LabelText, Combo, 
         Plot, SimplePlot, Indent, Unindent, Drawing, Window,
         Popup, Selectable, TreeNode, ProgressBar, Table, Dummy,
-        ImageButton
+        ImageButton, TimePicker, DatePicker
     };
 
     //-----------------------------------------------------------------------------
