@@ -550,6 +550,8 @@ namespace Marvel {
 		ADD_PYTHON_FUNCTION(get_item_children)
 
 		// widget commands
+		ADD_PYTHON_FUNCTION(add_date_picker)
+		ADD_PYTHON_FUNCTION(add_time_picker)
 		ADD_PYTHON_FUNCTION(add_input_text)
 		ADD_PYTHON_FUNCTION(add_input_int)
 		ADD_PYTHON_FUNCTION(add_input_int2)
